welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:36: error: not found: value couleur
    if ( getCouleurSol == couleur){
                          ^